--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,6 @@
 <%- include('header') %>
+<%- include('modal') %>
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <style>
@@ -6,20 +8,16 @@
     font-family: poppins;
   }
 </style>
-  <form id="loginform" action="/authenticate/login" method="post">
+  <form id="loginform" action="#" method="post">
     <div class="LoginPage d-flex justify-content-evenly" data-ride="carousel"
       style="background-position:center  ;background-size:cover;   background-image: url('/Images/New/image (14).jpg'  );">
       <div class=" container-fluid" style="background-color: rgba(62, 62, 62, 0.668);">
           <div class="container-fluid col-12 d-flex" style="height: 500px;">
-            <div class="container-fluid col-3">
-              1
+            <div class="container-fluid col-9">
+              <br><br><br><br><br>
+              <small id="idanimatedMessageLogin" class=" text-warning w-100" style="font-size: 90px; height: 100px;" >Make this festival yours</small>
             </div>
-            <div class="container-fluid col-3">
-              2
-            </div>
-            <div class="container-fluid col-3">
-              3
-            </div>
+             
             <div class="container-fluid col-3 border border-light    rounded   m-4   p-3 " style="  background-color: rgba(86,81,59,.5);">
                <div class="container-fluid mt-2   ">
                 <div class="container-fluid d-flex align-items-center col-12 " style="height: 50px;  ;">
@@ -33,18 +31,19 @@
                  
                   <div class="input-group  border border-secondary p-2 rounded   ">
                     <span class="input-group-text text-primary bg-light btn btn-secondary bi bi-person-bounding-box " id="basic-addon1"> </span>
-                    <input type="text" class="form-control" placeholder="email" aria-label="Username" aria-describedby="basic-addon1">
+                    <input type="email" class="form-control" id="idInputEmail" placeholder="email" aria-label="Username" aria-describedby="basic-addon1">
                   </div>
                  
                   <div class="input-group  border border-secondary p-2 rounded ">
                     <span class="input-group-text text-primary btn btn-secondary bi bi-shield-lock " id="basic-addon1"> </span>
-                    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                    <input type="password" id="idinputPassword" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
                   </div>
                   <div class=" container-fluid d-flex p-2 rounded justify-content-center ">
                     <div class="btn">
-                      <button class="input-group-text btn btn-secondary rounded    "   id="basic-addon1"> SIGN-IN</button>
-                    <small> <a class="text-warning" href=""> FORGOT? </a></small>
-                    </div>
+                      <button type="button" class="input-group-text btn btn-secondary rounded " onclick="vedurelogin( 'idInputEmail','idinputPassword')"   id="basic-addon1"> SIGN-IN</button>
+                    <small> <a class="text-warning"    data-bs-toggle="modal" data-bs-target="#idEnterOtp" > FORGOT? </a></small>
+                 
+                  </div>
                   </div>
                   
                   
@@ -57,6 +56,7 @@
 
 
   <script src="/Script/Script_Signup.js"> </script>
+  <%- include('footer') %>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
