--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,6 +24,7 @@
                   
                 </div> 
                  <div class="container-fluid  align-items-center col-12 " style="height: 80px;  ;">
+                  <small id="idInfoVendureLogin"  class="text-warning">  </small>   <br>
                   <small   class="text-light"> Welcome to </small>   <br>
                   <small style="font-size: 30px;" class="text-warning"> Book my trip</small> <br>
                       
