--- a/views/companyhomePage.ejs
+++ b/views/companyhomePage.ejs
@@ -1,17 +1,47 @@
 <%- include('header') %>
 <%- include('MenuBarCustomer') %>
 <div class="container-fluid justify-content-center row w-100"> 
-    <div class="container-fluid   w-100 btn  row d-flex bg-secondary d-flex flex-row"   style="background-size: cover; background-position: center; background-image: url('<%= profile.image1 %>'); height: 400px;">
-        <div class="container-fluid col-9">
-
-        </div>
-      <canvas id="eventChart" style="display: block; height: 238px; width: 476px;" width="952" height="476" class="chartjs-render-monitor"></canvas>
+  <div class="container-fluid w-100 btn row d-flex bg-secondary d-flex flex-row" style="flex-wrap: nowrap; background-color: transparent; height: 400px;">
+    
+      
+    <div class="d-flex container-fluid col-4 p-1"id="IdCompanyImagesbuton1" style="background-image: url('<%= profile.image1 %>'); height: 100%; background-position: center ; background-size: cover;">
+       
+      <label for="IdCompanyImages1" class="btn btn-secondary position-absolute bottom-0 end-0 me-3 " >
+        <input class="form-control d-none" onchange="uploadImageToParentNew('IdCompanyImages1','IdCompanyImagesbuton1','idCompanyimageSave1','id_icon_imageinput1')" name="roomImages" id="IdCompanyImages1" type="file" multiple>
+        <i id="id_icon_imageinput1" class="bi bi-camera" style="font-size: 24px;"></i>
+      </label>
+      <button  value="<%= profile.CompanyID %> <%= profile.image1 %> IdCompanyImages1 idCompanyimageSave1" onclick="saveImagetoCollection(event.target.value)"   class="btn btn-light bi bi-camera position-absolute bottom-1 end-1 me-3 mb-5" style="display: none;" id="idCompanyimageSave1" > SAVE</button> 
+      
     </div>
+      
+    <div class="d-flex container-fluid col-4 p-1"id="IdCompanyImagesbuton2" style="background-image: url('<%= profile.image2 %>'); height: 100%; background-position: center ; background-size: cover;">
+       
+      <label for="IdCompanyImages2" class="btn btn-secondary position-absolute bottom-0 end-0 me-3 " >
+        <input class="form-control d-none" onchange="uploadImageToParentNew('IdCompanyImages2','IdCompanyImagesbuton2','idCompanyimageSave2','id_icon_imageinput2')" name="roomImages" id="IdCompanyImages2" type="file" multiple>
+        <i id="id_icon_imageinput2" class="bi bi-camera" style="font-size: 24px;"></i>
+      </label>
+      <button  value="<%= profile.CompanyID %> <%= profile.image2 %> IdCompanyImages2 idCompanyimageSave2" onclick="saveImagetoCollection(event.target.value)"   class="btn btn-light bi bi-camera position-absolute bottom-1 end-1 me-3 mb-5" style="display: none;" id="idCompanyimageSave2" > SAVE</button> 
+      
+    </div>
+      
+    <div class="d-flex container-fluid col-4 p-1"id="IdCompanyImagesbuton3" style="background-image: url('<%= profile.image3 %>'); height: 100%; background-position: center ; background-size: cover;">
+       
+      <label for="IdCompanyImages3" class="btn btn-secondary position-absolute bottom-0 end-0 me-3 " >
+        <input class="form-control d-none" onchange="uploadImageToParentNew('IdCompanyImages3','IdCompanyImagesbuton3','idCompanyimageSave3','id_icon_imageinput3')" name="roomImages" id="IdCompanyImages3" type="file" multiple>
+        <i id="id_icon_imageinput3" class="bi bi-camera" style="font-size: 24px;"></i>
+      </label>
+      <button  value="<%= profile.CompanyID %> <%= profile.image3 %> IdCompanyImages3 idCompanyimageSave3" onclick="saveImagetoCollection(event.target.value)"   class="btn btn-light bi bi-camera position-absolute bottom-1 end-1 me-3 mb-5" style="display: none;" id="idCompanyimageSave3" > SAVE</button> 
+      
+    </div>
+    
+   
+    
+  </div>
+  
     <div class="container-fluid d-flex flex-row"  >
-      <div class="container-fluid col-2">
-        <small style="font-size: 50px;" class="text-secondary "> <%= profile.lastName %></small>  
-      </div>
-      <div class="container-fluid ">
+      <div class="container-fluid  ">
+        <small style="font-size: 50px;" class="text-secondary "> <%= profile.lastName %></small>  <br>
+       
         <small class="text-secondary">Email: <%= profile.email %></small>  
       <small class="text-secondary">Contact: <%= profile.contactNumber %></small> <br>
       <small class="text-secondary">Address: <%= profile.StreetName %> <%= profile.city %> pin:<%= profile.pincode %></small>  
@@ -977,11 +1007,6 @@
                       <input name="roomiMages" id="IdImages" type="file" class="form-control btn" multiple 
                       placeholder="Floor" aria-label="Username" aria-describedby="basic-addon1">
                   </div> 
-                  <div class="container-fluid d-flex">
-                    <button id="IdCompanyImagesbuton2"   data-bs-toggle="modal" data-bs-target="#CompanyImage2" class="btn btn-outline-primary " style="height: 250px;background-size: cover;background-position: center;" >
-                      <input onchange="uploadImageToParent17102023('IdCompanyImages2','IdCompanyImagesbuton2','idShowCompanyImage2')" name="roomiMages" id="IdCompanyImages2" type="file" class="form-control btn" multiple> 
-                    </button>
-                  </div>
                   
                   
             
