--- a/views/floorMap.ejs
+++ b/views/floorMap.ejs
@@ -1,4 +1,5 @@
 <%- include('header') %>
+<%- include('menubarCustomer') %>
   <%- include('menubar') %>
 
     <div class="d-flex "    style="background-image: url('/Images/1694680714940-image (6).jpg');  background-position: center; background-size: cover; background-repeat: no-repeat; position: fixed; height: 1000px;" >
