--- a/views/human.ejs
+++ b/views/human.ejs
@@ -1,4 +1,5 @@
 <%- include('header') %>
+<%- include('menubarCustomer') %>
 <%- include('menubar') %>
 <div>
     <div class="container-fluid d-flex ">
