--- a/views/custommerPage.ejs
+++ b/views/custommerPage.ejs
@@ -4,14 +4,13 @@
     
 
       <main>
-        <div class="w-100 overflow-hidden bg-gray-100" style="border: 1px solid white;" id="top"> 
+        <div class="container-fluid fixed"   id="top" style="height:730px; background-image: url('/Images/1694680589320-image (2).jpg');  background-position: center; background-size: cover;"> 
 
 
 
-          <div class="container position-relative">
-            <div class=" container-fluid fixed" data-aos="fade-left"
-              style="background-image: url('/Images/1694680589320-image (2).jpg'); height: 600px; background-position: center; background-size: cover;">
-               <br><br><br>
+          <div class="container position-relative" >
+            <div class=" container-fluid fixed" data-aos="fade-left" >
+               <br><br><br><br><br><br><br>
                 <div  >
                   <h1 class="text-light" style="font-size: 60px; font-family: poppins;" >Search your favorite desination </h1>
                   <div class="  container-fluid w-100 col-11 rounded border " style="  background-color:rgba(186, 90, 21, 0.748); height: 100px;" >
