--- a/views/modal.ejs
+++ b/views/modal.ejs
@@ -216,8 +216,8 @@
                     <div class="container-fluid border-light d-flex rounded mb-3">
                          
                         <button class="border-0 rounded-start col-4" id="Signup_input_group_text">Email</button>
-                        <input id="idverify_Email" type="email"  class="form-control " name="email" placeholder="Email" required>
-                        
+                        <input id="idverify_Email" type="email" onchange="verifyEmail('idverify_Email','idSignup_Email_Btn10','/VerifyEmail')"    class="form-control " name="email" placeholder="Email" required>
+                        <button id="idSignup_Email_Btn10" class="btn"></button>
             
                     </div>
                     
