--- a/views/adminDashBoard.ejs
+++ b/views/adminDashBoard.ejs
@@ -1,5 +1,5 @@
 <%- include('header') %>
-<%- include('menubarCustomer') %>
+<%- include('menuBarCustomer') %>
 <%- include('menubar') %>
 <div class="container-fluid">
     
