--- a/views/detailedSearch.ejs
+++ b/views/detailedSearch.ejs
@@ -104,8 +104,8 @@
                 </div>
              
                                      
-                <div class="container-fluid border rounded d-flex   " style="  overflow: auto; flex-wrap: wrap;display: flex;" id="idTariffDetails"> 
-                 
+                <!-- <div class="container-fluid border rounded d-flex   " style="  overflow: auto; flex-wrap: wrap;display: flex;" id="idTariffDetails">  -->
+                    <div class="container-fluid border rounded d-flex flex-wrap flex-sm-nowrap" style="overflow: auto;" id="idTariffDetails">                 
                          
                             
                               <% result.forEach(element => { %>
