--- a/views/detailedSearch.ejs
+++ b/views/detailedSearch.ejs
@@ -109,7 +109,7 @@
                          
                             
                               <% result.forEach(element => { %>
-                                <div class="card col-3 p-1 m-0"   >
+                                <div class="card col-12 col-sm-6 col-md-4 col-lg-3 p-2" style="margin: 0;">
                                     <img class="w-100 rounded" style="height: 30%;" name="companyImage" value="<%= element.image1 %>" src="<%= element.image1 %>" class="card-img-top" alt="...">
                                     <div class="card-body">
                                       <h3 class="card-title" data-hotelTariffs="${result[i].tariffDetails}" style="text-transform: uppercase"> <%= element.lastName %></h3> <small class="card-text" style="text-transform: uppercase; height: fit-content;"  ><%= element.district %> </small> <br>
