--- a/views/MenuBarCustomer.ejs
+++ b/views/MenuBarCustomer.ejs
@@ -7,51 +7,60 @@
 <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-<nav class="navbar navbar-expand-lg navbar-dark container-fluid " style="background-color:  rgba(43, 59, 43, 0.796);">
-  <div class="container px-5">
-    <div class="container-fluid d-flex">
-     
-<style>
-  body{
-      font-family: Poppins;
-  }
-</style> 
-      <small class="text text-light" > <span class="navbar-brand" style="font-size: 50px;" href="#!">Book My Trip </span> Navigate Luxury, Book with Ease.</small>
-    </div>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-       
-         
-        <button id="idloggedusermenubar" value="" class="btn"> </button>
-            <% if (user.firstName) { %>
-              <!-- Example single danger button -->
-                       
-                        <a id="idloggedusermenubar" type="button"  value="<%=user.firstName%>" class="p-1 btn text-light  bi bi-house-up-fill w-100 h-100" href="/authenticate/custLogin">HOME </a>
-                        <a id="idloggedusermenubar" type="button" onclick="logout()" value="<%=user.firstName%>" class="p-1 btn text-light   bi bi-power w-100 h-100" href="#">LOGOUT</a>
-                        <a id="idloggedusermenubar" type="button"  value="<%=user.firstName%>" class="p-1 btn text-light bi bi-person-square w-100 h-100" href="/custom/Home">PROFILE </a>
-                        <div class="btn-group">
-                          <button type="button" class="btn btn-warning dropdown-toggle col-12" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <%=user.firstName%>
-                          </button>
-                          <div class="dropdown-menu btn  border-0 col-12">
-                            <a id="idloggedusermenubar" type="button"  value="<%=user.firstName%>" class="p-1 btn-warning btn bi bi-person-square w-100 h-100" data-bs-toggle="modal" data-bs-target="#VendureLogin"  > PARTNER LOGIN  </a>
-                            <a id="idloggedusermenubar" type="button"  value="<%=user.firstName%>" class="p-1 btn btn-warning  bi bi-person-square w-100 h-100" data-bs-toggle="modal" data-bs-target="#exampleModal" >STAFF LOGIN  </a>
-                        
-                          </div>
-                        </div>   
-        
-        <% } else { %>
-          
-          
-          <li class="nav-item"><button type="button" id="idUserName" data-bs-toggle="modal" data-bs-target="#customerLogin"
-              style="background-color: rgb(98, 111, 98);" class="btn btn-success nav-link"> LOGIN </button> </li>        
-          <% } %>
+  <style>
+    body{
+        font-family: Poppins;
+    }
+  </style> 
 
-                    
-      </ul>
-    </div>
+<nav class="navbar navbar-expand-lg  " style="background-color:  rgba(43, 59, 43, 0.796);">
+  <div class="container-fluid ">
+    <small class="text text-light" > <span class="navbar-brand text text-light" style="font-size: 50px;" href="#!">Book My Trip </span> Navigate Luxury, Book with Ease.</small>
+  </div>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav1" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav1">
+    <ul class="navbar-nav">
+      <button id="idloggedusermenubar" value="" class="btn"> </button>
+      <% if (user.firstName) { %>
+            <!-- Example single danger button -->
+                  <li class="nav-item active"> 
+                    <a id="idloggedusermenubar" type="button"  value="<%=user.firstName%>" class="p-1 btn text-light  bi bi-house-up-fill w-100 h-100" href="/authenticate/custLogin">HOME </a>
+                  </li>  
+                  <li class="nav-item "> 
+                    <a id="idloggedusermenubar" type="button" onclick="logout()" value="<%=user.firstName%>" class="p-1 btn text-light   bi bi-power w-100 h-100" href="#">LOGOUT</a>
+                  </li>    
+                  <li class="nav-item "> 
+                  <a id="idloggedusermenubar" type="button"  value="<%=user.firstName%>" class="p-1 btn text-light bi bi-person-square w-100 h-100" href="/custom/Home">PROFILE </a>
+                  </li>
+                  <li class="nav-item "> 
+                      <div class="btn-group">
+                        <button type="button" class="btn btn-warning dropdown-toggle col-12" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          <%=user.firstName%>
+                        </button>
+                        <div class="dropdown-menu btn  border-0 col-12">
+                          <a id="idloggedusermenubar" type="button"  value="<%=user.firstName%>" class="p-1 btn-warning btn bi bi-person-square w-100 h-100" data-bs-toggle="modal" data-bs-target="#VendureLogin"  > PARTNER LOGIN  </a>
+                          <a id="idloggedusermenubar" type="button"  value="<%=user.firstName%>" class="p-1 btn btn-warning  bi bi-person-square w-100 h-100" data-bs-toggle="modal" data-bs-target="#exampleModal" >STAFF LOGIN  </a>
+                      
+                        </div>
+                      </div>   
+                  </li>
+      
+     <% } else { %>
+      <li class="nav-item active"> 
+           <button type="button" id="idUserName" data-bs-toggle="modal" data-bs-target="#customerLogin"
+            style="background-color: rgb(98, 111, 98);" class="btn btn-success nav-link"> LOGIN </button> 
+      </li>        
+     <% } %>
+
+                  
+    </ul>
   </div>
 </nav>
+ 
+
+
 
 
 <body>
