--- a/views/MenuBarCustomer.ejs
+++ b/views/MenuBarCustomer.ejs
@@ -20,39 +20,42 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav1" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav1">
+  <div class="collapse navbar-collapse bg-primary" id="navbarNav1">
     <ul class="navbar-nav">
       <button id="idloggedusermenubar" value="" class="btn"> </button>
       <% if (user.firstName) { %>
             <!-- Example single danger button -->
-                  <li class="nav-item active"> 
-                    <a id="idloggedusermenubar" type="button"  value="<%=user.firstName%>" class="p-1 btn text-light  bi bi-house-up-fill w-100 h-100" href="/authenticate/custLogin">HOME </a>
-                  </li>  
-                  <li class="nav-item "> 
-                    <a id="idloggedusermenubar" type="button" onclick="logout()" value="<%=user.firstName%>" class="p-1 btn text-light   bi bi-power w-100 h-100" href="#">LOGOUT</a>
-                  </li>    
-                  <li class="nav-item "> 
-                  <a id="idloggedusermenubar" type="button"  value="<%=user.firstName%>" class="p-1 btn text-light bi bi-person-square w-100 h-100" href="/custom/Home">PROFILE </a>
-                  </li>
-                  <li class="nav-item "> 
-                      <div class="btn-group">
-                        <button type="button" class="btn btn-warning dropdown-toggle col-12" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          <%=user.firstName%>
-                        </button>
-                        <div class="dropdown-menu btn  border-0 col-12">
-                          <a id="idloggedusermenubar" type="button"  value="<%=user.firstName%>" class="p-1 btn-warning btn bi bi-person-square w-100 h-100" data-bs-toggle="modal" data-bs-target="#VendureLogin"  > PARTNER LOGIN  </a>
-                          <a id="idloggedusermenubar" type="button"  value="<%=user.firstName%>" class="p-1 btn btn-warning  bi bi-person-square w-100 h-100" data-bs-toggle="modal" data-bs-target="#exampleModal" >STAFF LOGIN  </a>
-                      
-                        </div>
-                      </div>   
-                  </li>
-      
+            <li class="nav-item active"> 
+              <a id="idloggedusermenubar" type="button"  value="<%=user.firstName%>" class="p-1 btn text-light  bi bi-house-up-fill w-100 h-100" href="/authenticate/custLogin">HOME </a>
+            </li>  
+            <li class="nav-item "> 
+              <a id="idloggedusermenubar" type="button" onclick="logout()" value="<%=user.firstName%>" class="p-1 btn text-light   bi bi-power w-100 h-100" href="#">LOGOUT</a>
+            </li>    
+            <li class="nav-item "> 
+            <a id="idloggedusermenubar" type="button"  value="<%=user.firstName%>" class="p-1 btn text-light bi bi-person-square w-100 h-100" href="/custom/Home">PROFILE </a>
+            </li>
+            <li class="nav-item "> 
+                <div class="btn-group h-100">
+                  <button type="button" class="btn btn-warning dropdown-toggle col-12 h-100" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <%=user.firstName%>
+                  </button>
+                  <div class="dropdown-menu btn  border-0 col-12">
+                    <a id="idloggedusermenubar" type="button"  value="<%=user.firstName%>" class="p-1 btn-warning btn bi bi-person-square w-100 h-100" data-bs-toggle="modal" data-bs-target="#VendureLogin"  > PARTNER LOGIN  </a>
+                    <a id="idloggedusermenubar" type="button"  value="<%=user.firstName%>" class="p-1 btn btn-warning  bi bi-person-square w-100 h-100" data-bs-toggle="modal" data-bs-target="#exampleModal" >STAFF LOGIN  </a>
+                
+                  </div>
+                </div>   
+            </li>
+
      <% } else { %>
-      <li class="nav-item active"> 
-           <button type="button" id="idUserName" data-bs-toggle="modal" data-bs-target="#customerLogin"
-            style="background-color: rgb(98, 111, 98);" class="btn btn-success nav-link"> LOGIN </button> 
-      </li>        
-     <% } %>
+            <li class="nav-item active"> 
+                <a type="button" id="idUserName" data-bs-toggle="modal" data-bs-target="#customerLogin"
+                  style="background-color: rgb(98, 111, 98);" class="btn btn-success nav-link"> LOGIN </a> 
+            </li>    
+            <li class="nav-item active"> 
+              <a id="idloggedusermenubar" type="button"  value="<%=user.firstName%>" class="p-1 btn text-light  bi bi-house-up-fill w-100 h-100" href="/authenticate/custLogin">HOME </a>
+            </li>      
+    <% } %>
 
                   
     </ul>
